force-app/main/default/objects/OrderItem/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <formula>TEXT( ChargeModel__c ) + 

IF( NOT( ISPICKVAL( ChargeModel__c, &quot;One-Time&quot; )), &quot; (&quot; + TEXT(SBQQ__BillingFrequency__c) + &quot; in &quot; + TEXT(SBQQ__BillingType__c) + &quot;)&quot;, &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequency</label>
    <type>Text</type>
</CustomField>