force-app/main/default/objects/OrderItem/fields/HasConsumptionSchedule__c.field-meta.xml
<CustomField>
    <fullName>HasConsumptionSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Consumption Schedule</label>
    <type>Checkbox</type>
</CustomField>