force-app/main/default/objects/OrderItem/fields/OriginalNextBillingDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalNextBillingDate__c</fullName>
    <label>Original Next Billing Date</label>
    <type>Date</type>
</CustomField>